part2/3/k8s/manifests/deployment-log-output.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: myapp-namespace
  name: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
        - name: log-output
          image: deecaad/devopsk8s:part2-3-log-output-1
