part2/3/k8s/manifests/deployment-ping-pong.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: myapp-namespace
  name: ping-pong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
        - name: ping-pong
          image: deecaad/devopsk8s:part2-3-ping-pong-1
