part2/3/k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: myapp-namespace
  name: myapp-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: myapp-namespace-prefix-strip@kubernetescrd
spec:
  rules:
    - http:
        paths:
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: ping-pong-svc
                port:
                  number: 2348
          - path: /
            pathType: Prefix
            backend:
              service:
                name: log-output-svc
                port:
                  number: 2347
